--- a/src/frontend/scss/components/templates/richie/nesteditem/_nesteditem.scss
+++ b/src/frontend/scss/components/templates/richie/nesteditem/_nesteditem.scss
@@ -158,6 +158,7 @@
           color: r-theme-val(accordion-plan, title-color);
           font-weight: bold;
           line-height: 1.1;
+          text-align: left;
           cursor: pointer;
           background: transparent;
           border: 0;
