--- a/src/frontend/scss/settings/_variables.scss
+++ b/src/frontend/scss/settings/_variables.scss
@@ -65,8 +65,9 @@ $font-weight-boldest: 700; // Montserrat only
 $font-weight-extrabold: 800; // Montserrat only
 
 // Adjust heading sizes
-$h1-font-size: 3rem;
-$h2-font-size: 2rem;
+$extra-font-size: 3rem;
+$h1-font-size: 2.2rem;
+$h2-font-size: 1.8rem;
 $h3-font-size: 1.5rem;
 $h4-font-size: 1.125rem;
 $h5-font-size: 1rem;
